<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="alternate_title">An alternate title that is long</string>
    <string name="toggle_title">Toggle title</string>

    <string name="menu_refresh">Refresh</string>
    <string name="menu_search">Search</string>
    <string name="menu_share">Share</string>
    
    <!-- buttons -->
    <string name="save">Save</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="back">Back</string>
    <string name="test">Test</string>
    <string name="next">Next</string>
    <string name="save_and_finish">Save</string>
    <string name="advanced">Advanced</string>
    <string name="pop3_settings">POP3 Settings</string>
    <string name="imap_settings">IMAP Settings</string>
    
    <!-- Mail properties -->
    <string name="mail_settings_activity_name">Email Settings</string>
    <string name="mail_address_activity_name">Email Address</string>
    <string name="mail_username">Email Address</string>
    <string name="google_account">Google Account</string>
    <string name="google_account_activity_name">Google Account</string>
    <string name="mail_password">Password</string>
    <string name="mail_smtp_settings_activity_name">SMTP Settings</string>
    <string name="mail_smtp_host">SMTP Host</string>
    <string name="mail_smtp_port">SMTP Port</string>
    <string name="mail_smtp_auth">SMTP Auth</string>
    <string name="mail_smtp_start_tls_enable">SMTP Start Tls Enable</string>
    <string name="mail_smtp_socket_factory_port">SMTP Socket Factory Port</string>
    <string name="mail_smtp_socket_factory_class">SMTP Socket Factory Class</string>
    <string name="mail_pop3_settings_activity_name">POP3 Settings</string>
    <string name="mail_pop3_host">POP3 Host</string>
    <string name="mail_pop3_port">POP3 Port</string>
    <string name="mail_imap_settings_activity_name">IMAP Settings</string>
    <string name="mail_pop3_socket_factory_port">POP3 Socket Factory Port</string>
    <string name="mail_pop3_socket_factory_class">POP3 Socket Factory Class</string>
    <string name="mail_pop3_socket_factory_fallback">POP3 Socket Factory Fallback</string>
    <string name="mail_imap_host">IMAP Host</string>
    <string name="mail_imap_port">IMAP Port</string>
    <string name="finish_activity_name">Finish</string>
    
    <!-- Activity Titles -->
    <string name="app_name">WhereAreYou</string>
    <string name="contacts">Contacts</string>
    <string name="allowed_location_requests">Allowed Location Requests</string>
    <string name="edit_contact">Edit Contact</string>
    
    <!-- Map Activity Menu Items -->
    <string name="menu_edit_email_account">Google Account</string>
    <string name="menu_view_contacts">View Contacts</string>
    
    <!-- Check Email Result -->
    <string name="check_email_result_title">Check Email</string>
    <string name="check_email_smtp">Checking SMTP settings. Please, wait&#8230;</string>
    <string name="check_email_settings">Checking email settings. Please, wait&#8230;</string>
    <string name="check_email_pop3">Checking POP3 settings. Please, wait&#8230;</string>
    <string name="check_email_imap">Checking IMAP settings. Please, wait&#8230;</string>
    <string name="check_email_result_authentication_failed">Authentication failed</string>
    <string name="check_email_result_connection_failed">Connection failed</string>
    <string name="check_email_result_pending">Pending&#8230;</string>
    <string name="check_email_result_smtp">SMTP</string>
    <string name="check_email_result_pop3">POP3</string>
    <string name="check_email_result_imap">IMAP</string>
    <string name="check_email_result_success">Success</string>
    <string name="check_email_result_failure">Failure</string>
    
    <!-- Contacts -->
    <string name="no_contacts">No contacts</string>
    <string name="request_allowance">Request allowance</string>
    <string name="state_of_outgoing_requests">State of outgoing requests</string>
    <string name="state_of_incoming_requests">State of incoming requests</string>
        
    <!-- Contacts Options Menu Items -->
    <string name="enter_email_account">Enter Email Account</string>
    <string name="edit_email_account">Edit Email Account</string>
    <string name="edit_google_account">Edit Google Account</string>
    <string name="get_accounts">Get Accounts</string>
    <string name="add_email_account">Add Email Account</string>
    <string name="map">Map</string>
    
    <!-- Contacts Context Menu Items -->
    <string name="menu_edit_contact_details">Edit Details</string>
    <string name="menu_view_last_contact_location">View Last Location</string>
    <string name="menu_request_contact_location">Request Location</string>
    
    <!-- Edit Contact -->
    <string name="contact_display_name">Name</string>
    <string name="contact_email">email</string>
    <string name="location_requests_allowance">Location Requests Allowed</string>
    
    <!-- Notifications -->
    <string name="notifications_contact_locations">Contact Locations</string>
    <string name="notifications_contact_locations_received">Contact locations received</string>

    <string-array name="requests_allowances_array">
        <item>Never</item>
        <item>Always</item>
    </string-array>
    
    <string name="google_account_not_found">Google Account is not found. Please, define your Google Account first</string>
    <string name="not_google_account">Google Account must be either username@googlemail.com or username@gmail.com</string>
</resources>