<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            style="@style/ScrollViewFillViewport">

    <LinearLayout style="@style/VerticalLinearLayout.AccountBackground">
    
        <LinearLayout style="@style/VerticalExpandableLinearLayout">

            <EditText android:id="@+id/mail_smtp_host"
                      style="@style/GenericField.Text.Next"
                      android:hint="@string/mail_smtp_host"/>
            <EditText android:id="@+id/mail_smtp_port"
                      style="@style/GenericField.Number.Next"
                      android:hint="@string/mail_smtp_port"/>

            <LinearLayout style="@style/HorizontalLinearLayout">
                <TextView android:text="@string/mail_smtp_auth"
                          style="@style/TextView.HorizontallyExpandable.AccountLabelText"/>
                <CheckBox android:id="@+id/mail_smtp_auth"
                          style="@style/CheckBoxField"/>
            </LinearLayout>

            <LinearLayout style="@style/HorizontalLinearLayout">
                <TextView android:text="@string/mail_smtp_start_tls_enable"
                          style="@style/TextView.HorizontallyExpandable.AccountLabelText"/>
                <CheckBox android:id="@+id/mail_smtp_start_tls_enable"
                          style="@style/CheckBoxField"/>
            </LinearLayout>

            <EditText android:id="@+id/mail_smtp_socket_factory_port"
                      style="@style/GenericField.Number.Next"
                      android:hint="@string/mail_smtp_socket_factory_port"/>

            <EditText android:id="@+id/mail_smtp_socket_factory_class"
                      style="@style/GenericField.Text.Done"
                      android:hint="@string/mail_smtp_socket_factory_class"/>
        </LinearLayout>

        <include layout="@layout/email_account_buttons"/>

    </LinearLayout>
    
</ScrollView>
