<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    
    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:text="@string/contact_display_name" />
    <TextView android:id="@+id/contact_display_name" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:text="@string/contact_email" />
    <EditText android:id="@+id/contact_email" 
        android:layout_width="fill_parent"
        android:layout_height="40px"
        android:scrollbars="vertical" />

    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="3dip"
        android:text="@string/location_requests_allowance" />
    <Spinner android:id="@+id/location_requests_allowance"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    
    <Button android:id="@+id/contact_save" 
        android:text="@string/save"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    
</LinearLayout>
