<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent" 
            android:layout_height="fill_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:orientation="vertical"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:paddingTop="6dp"
                  android:paddingBottom="6dp">
                  
        <EditText android:id="@+id/mail_pop3_host"
                  android:layout_width="fill_parent"
                  android:layout_height="0dp"
                  android:layout_weight="1"
                  android:padding="3dp"
                  android:inputType="text"
                  android:imeOptions="actionNext"
                  android:hint="@string/mail_pop3_host"/>

        <EditText android:id="@+id/mail_pop3_port"
                  android:layout_width="120dp"
                  android:layout_height="0dp"
                  android:layout_weight="1"
                  android:padding="3dp"
                  android:inputType="number"
                  android:imeOptions="actionNext"
                  android:hint="@string/mail_pop3_port"/>

        <EditText android:id="@+id/mail_pop3_socket_factory_port"
                  android:layout_width="120dp"
                  android:layout_height="0dp"
                  android:layout_weight="1"
                  android:padding="3dp"
                  android:inputType="number"
                  android:imeOptions="actionNext"
                  android:hint="@string/mail_pop3_socket_factory_port"/>

        <EditText android:id="@+id/mail_pop3_socket_factory_class"
                  android:layout_width="fill_parent"
                  android:layout_height="0dp"
                  android:layout_weight="1"
                  android:padding="3dp"
                  android:inputType="text"
                  android:imeOptions="actionDone"
                  android:hint="@string/mail_pop3_socket_factory_class"/>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                      android:orientation="horizontal"
                      android:layout_width="fill_parent"
                      android:layout_height="0dp"
                      android:layout_weight="1">
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content" 
                      android:padding="3dp"
                      android:text="@string/mail_pop3_socket_factory_fallback"/>
            <CheckBox android:id="@+id/mail_pop3_socket_factory_fallback"
                      android:layout_height="wrap_content"
                      android:layout_width="wrap_content"
                      android:padding="3dp"/>
        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                      android:orientation="horizontal"
                      android:layout_width="fill_parent"
                      android:layout_height="wrap_content">
            <Button android:id="@+id/mail_properties_button_back" 
                    android:text="@string/back"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="1"/>
            <Button android:id="@+id/mail_properties_button_test" 
                    android:text="@string/test"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="1"/>
            <Button android:id="@+id/mail_properties_button_next" 
                    android:text="@string/next"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
