<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent" 
            android:layout_height="fill_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:orientation="vertical"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:paddingTop="6dp"
                  android:paddingBottom="6dp">
                  
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content" 
                      android:padding="3dp"
                      android:text="@string/mail_pop3_socket_factory_fallback"/>
        
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                      android:orientation="horizontal"
                      android:layout_width="fill_parent"
                      android:layout_height="fill_parent">
            <Button android:id="@+id/mail_properties_button_back" 
                    android:text="@string/back"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="1"/>
            <Button android:id="@+id/mail_properties_button_test" 
                    android:text="@string/test"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="1"/>
            <Button android:id="@+id/mail_properties_button_next" 
                    android:text="@string/save"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
