<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            style="@style/ScrollViewFillViewport">

    <LinearLayout style="@style/VerticalLinearLayout.BlackBackground">

        <LinearLayout style="@style/VerticalExpandableLinearLayout">

            <LinearLayout style="@style/HorizontalLinearLayout">
                <TextView android:text="@string/contact_display_name"
                          style="@style/TextView.White"/>
                <TextView android:id="@+id/contact_display_name" 
                          style="@style/TextView.White"/>
            </LinearLayout>
            
            <LinearLayout style="@style/HorizontalLinearLayout">
                <EditText android:id="@+id/contact_email"
                          style="@style/GenericField.Email" 
                          android:hint="@string/contact_email"
                          android:layout_width="0dp"
                          android:layout_weight="1"
                          android:imeOptions="actionDone"/>
                <TextView android:text="@string/googlemail_com"
                          style="@style/TextView.White"/>
            </LinearLayout>
            
            <LinearLayout style="@style/HorizontalLinearLayout">
                <TextView android:text="@string/location_requests_allowance"
                          style="@style/TextView.White"/>
                <Spinner android:id="@+id/location_requests_allowance"
                         android:layout_width="fill_parent"
                         android:layout_height="wrap_content" />
            </LinearLayout>
            
        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                      style="@style/HorizontalLinearLayout.Grey">
                  
            <Button android:id="@+id/contact_save" 
                    android:text="@string/save"
                    style="@style/ExpandableButton"/>
        </LinearLayout>
        
    </LinearLayout>
    
</ScrollView>
